--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -34,7 +34,7 @@
        </div>
        <div class = "col-lg-6 col-12">
            <div  class = "visit-img">
-               <img src = "assets/img/visit/sec2.jpg" width="100%">
+               <img src = "{{page.newwayshopimage}}" width="100%">
            </div>
        </div>
      </div>
@@ -51,7 +51,7 @@
         <div class  ="row pt-4">
             <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
-                    <img src="assets/img/visit/sec3-card1.jpg" width = "100%" alt="img" class="img-responsive">
+                    <img src="{{page.newwayshopimage1}}" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
                         <h6 class = "text-light">{{page.newwayshoptitle1}}</h6>
                         <p class = "text-light">{{page.newwayshopdescriaption1}}</p>
@@ -60,7 +60,7 @@
             </div>
             <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
-                    <img src="assets/img/visit/sec3-card2.jpg" width = "100%" alt="img" class="img-responsive">
+                    <img src="{{page.newwayshopimage2}}" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
                         <h6 class = "text-light">{{page.newwayshoptitle2}}</h6>
                         <p class = "text-light">{{page.newwayshopdescriaption2}}</p>
@@ -69,7 +69,7 @@
             </div>
             <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
-                    <img src="assets/img/visit/sec3-card3.jpg" width = "100%" alt="img" class="img-responsive">
+                    <img src="{{page.newwayshopimage3}}" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
                         <h6 class = "text-light">{{page.newwayshoptitle3}}</h6>
                         <p class = "text-light">{{page.newwayshopdescriaption3}}</p>
@@ -78,7 +78,7 @@
             </div>
             <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
-                    <img src="assets/img/visit/sec3-card4.jpg" width = "100%" alt="img" class="img-responsive">
+                    <img src="{{page.newwayshopimage4}}" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
                         <h6 class = "text-light">{{page.newwayshoptitle4}}</h6>
                         <p class = "text-light">{{page.newwayshopdescriaption4}}</p>
@@ -97,7 +97,7 @@
      <div class = "row flex-column-reverse flex-lg-row flex-md-row">
        <div class = "col-lg-6 col-12">
            <div class = "visit-img">
-               <img src = "assets/img/visit/sec4-img.jpg" width="100%">
+               <img src = "{{page.ourteamimage}}" width="100%">
            </div>
        </div>
        <div class = "col-lg-6 col-12 ">
@@ -126,7 +126,7 @@
      </div>
      <div class = "col-lg-6 col-12">
         <div class = "visit-img">
-            <img src = "assets/img/visit/sec5-img.jpg" width="100%">
+            <img src = "{{page.operationimage}}" width="100%">
         </div>
     </div>
      </div>
@@ -258,7 +258,7 @@
      <div class = "row">
      <div class = "col-lg-6 col-12">
         <div class = "visit-img1">
-            <img src = "assets/img/visit/apartment.jpg" width="100%">
+            <img src = "{{page.nycimage}}" width="100%">
         </div>
     </div>
     <div class = "col-lg-6 col-12 ">
