--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -1,5 +1,69 @@
+<section id = "studio-banner-slider">
+ 
+    
+ <ngx-slick-carousel class="carousel"
+  #slickModal="slick-carousel"
+  [config]="studioBannerSlideConfig">
+ 
+  <div ngxSlickItem  class="slide slider_content">
+    <div class = "box">
+      <div>
+        <img src = "assets/img/visit/studio-banner2.jpg" width="100%">
+        <div class ="overlay">
+        </div>
+      </div>
+      <div class = "container">
+      <div class = "slider_content">
+        <div class = "text-center">
+          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
+          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
+          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div ngxSlickItem  class="slide slider_content">
+    <div class = "box">
+      <div>
+        <img src = "assets/img/visit/studio-banner3.jpg" width="100%">
+         <div class ="overlay">
+        </div>
+      </div>
+      <div class = "container">
+      <div class = "slider_content">
+        <div class = "text-center">
+          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
+          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
+          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div ngxSlickItem  class="slide slider_content">
+    <div class = "box">
+      <div>
+        <img src = "assets/img/visit/studio-banner4.jpg" width="100%">
+        <div class ="overlay">
+        </div>
+      </div>
+      <div class = "container">
+      <div class = "slider_content">
+        <div class = "text-center">
+          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
+          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
+          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
+      </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </ngx-slick-carousel>
+
+</section>
 <!----------------(Banner Start)------------------>
-<section id = "studio-banner">
+<!---<section id = "studio-banner">
     <div class = "container">
       <div class = "text-center">
         <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
@@ -7,7 +71,9 @@
         <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
     </div>
     </div>
-</section>
+</section>  -->
+
+
 <!----------------(Banner End)------------------>
 
 <!----------------(studio-section1 Start)---------------->
