--- a/src/app/page/trade-program/trade-program.component.scss
+++ b/src/app/page/trade-program/trade-program.component.scss
@@ -20,33 +20,42 @@ section .blue-btn{
 /*****Main SCSS Start*****/ 
 
 /**********Banner*******/
-#trade-banner{
-    background-image: url("/assets/img/trade-program/trade-banner.jpg");
-    padding-top: 15rem;
-    padding-bottom: 15rem;
-    background-size: cover;
-    background-repeat: no-repeat;
-    animation: change 20s infinite ease-in-out;
-	@keyframes change {
-		0%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/trade-program/trade-banner1.jpg");
-		}
-        25%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/trade-program/trade-banner2.jpg");
-		}
-        50%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/trade-program/trade-banner3.jpg");
-		}
-		75%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/trade-program/trade-banner4.jpg");
-		}
-		100%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/trade-program/trade-banner5.jpg");
-		}
-    }
+#trade-banner-slider {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	position: relative;
+	.overlay{
+		content: " ";
+        position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+       left: 0;
+       right: 0;
+       bottom: 0;
+	   background-color: #38494d99;
+     
+	}
+	.container{
+	  max-width: 700px !important;
+	  position: absolute;
+      height: auto;
+      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) !important;
 
-}
+	  h6{
+		padding: 1rem;
+	  }
+	  button{
+		padding: 0.8rem;
+		width: 280px !important;
+	  }
+	}
 
+	
+  }
 /**********Section1*******/
 #trade-section1{
        .container{
