--- a/src/app/page/visit-us/the-apartment/the-apartment.component.scss
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.scss
@@ -2,37 +2,42 @@
 p{font-size: 18px;line-height: 28px;}
 h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px;background: #627b80;bottom: 0;text-align: center;margin-top: 10px;}}
 /*********===========Visit Us(apartment) SCSS===========******/
-#apartment-banner{
-	padding-top: 10rem;
-    padding-bottom: 10rem;
-    background: linear-gradient(-45deg, #38494d99, #38494d99), url("/assets/img/visit/studio-banner1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-	background-position: center;
-	animation: change 20s infinite ease-in-out;
-	@keyframes change {
-		0%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner1.jpg");
-		}
-		50%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner3.jpg");
-		}
-		100%{
-			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner5.jpg");
-		}
-    }
-    .container {
-		max-width: 700px !important;
+#apartment-banner-slider {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	position: relative;
+	.overlay{
+		content: " ";
+        position: absolute;
 		width: 100%;
-        h6 {
-            padding: 1rem 0rem;
-        }
-        button {
-            padding: 0.8rem;
-            width: 280px !important;
-        }
-	}	
-}
+		height: 100%;
+		top: 0;
+       left: 0;
+       right: 0;
+       bottom: 0;
+       background-color: rgba(0,0,0,0.5);
+     
+	}
+	.container{
+	  max-width: 700px !important;
+	  position: absolute;
+      height: auto;
+      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) !important;
+
+	  h6{
+		padding: 1rem;
+	  }
+	  button{
+		padding: 0.8rem;
+		width: 280px !important;
+	  }
+	}
+
+	
+  }
 /******apartment section1******/
 
 /******apartment section2******/
