--- a/src/app/page/visit-us/the-studio/the-studio.component.scss
+++ b/src/app/page/visit-us/the-studio/the-studio.component.scss
@@ -5,28 +5,31 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
   .col2{padding:10rem 0rem 0rem 2rem;}
   
   /*********===========Visit Us(Studio) SCSS===========******/
-  #studio-banner {
-	padding: 10rem 0rem;
-	background: linear-gradient(-45deg, #38494d99, #38494d99),
-	  url("/assets/img/visit/studio-banner1.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	animation: change 20s infinite ease-in-out;
-	@keyframes change {
-	  0%{
-		background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner1.jpg");
-	  }
-	  50%{
-		background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner3.jpg");
-	  }
-	  100% {
-		background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner5.jpg");
-	  }
+  #studio-banner-slider {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	position: relative;
+	.overlay{
+		content: " ";
+        position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+       left: 0;
+       right: 0;
+       bottom: 0;
+	   background-color: #38494d99;
+     
 	}
 	.container{
 	  max-width: 700px !important;
-	  width: 100%;
+	  position: absolute;
+      height: auto;
+      width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) !important;
+
 	  h6{
 		padding: 1rem;
 	  }
@@ -35,6 +38,8 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
 		width: 280px !important;
 	  }
 	}
+
+	
   }
   /******Studio section1******/
   /******Studio section2******/
