--- a/src/app/page/our-story/our-story.component.html
+++ b/src/app/page/our-story/our-story.component.html
@@ -13,7 +13,7 @@
     <div class ="container">
         <div class = "box text-center">
              <h2>{{page.wowearetitle1}}</h2>
-             <p>{{page.wowearedescripation}}</p>
+             <p [innerHTML]="page.wowearedescripation"></p>
              <img src = "{{page.woweareimage}}" alt = "img">
         </div>
 
