--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,32 +12,9 @@
           <div>
             <h4>Company</h4>
             <ul class = "navbar-nav">
-              <!----   <li class = "nav-item" *ngFor="let company of company">
-                <a [routerLink] = "company.link" class = "nav-link">{{company.menu_title}}</a>
-                </li>  -->
-              <li class = "nav-item">
-                <a href = "#" class = "nav-link">Home</a>
+              <li class = "nav-item" *ngFor="let menu of menu">
+                <a [routerLink] = "menu.link" class = "nav-link">{{menu.label}}</a>
               </li>
-              <li class = "nav-item">
-                <a routerLink = "/visit/studio" class = "nav-link">The Studio, Marrakech</a>
-              </li>
-              <li  class = "nav-item">
-                <a routerLink = "/visit/apartment" class = "nav-link">The Apartment, NYC</a>
-              </li>
-
-              <li class = "nav-item">
-                <a routerLink = "/products" class = "nav-link">Our Products</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/our-process" class = "nav-link">Our Process</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/our-story" class = "nav-link">Our Story</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/contact" class = "nav-link">Contact Us</a>
-              </li>
-
             </ul>
           </div>
         </div>
@@ -45,30 +22,10 @@
           <div>
             <h4>Support</h4>
             <ul class = "navbar-nav">
-              <!---- <li class = "nav-item" *ngFor="let supportLinks of support">
-                <a [routerLink]="['pages', supportLinks.seo_title]" class = "nav-link">{{supportLinks.title}}</a>
-                </li>  -->
-                <li class = "nav-item">
-                  <a routerLink = "/swatches" class = "nav-link">Swatches</a>
+                <li class = "nav-item" *ngFor="let supportLinks of menu1">
+                <a [routerLink]="supportLinks.link" class = "nav-link">{{supportLinks.label}}</a>
                 </li>
-              <li class = "nav-item">
-                <a routerLink = "/size-guide" class = "nav-link">Size Guide</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/gift-card" class = "nav-link">Gift Card</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/trade-program" class = "nav-link">Trade Program</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/terms-and-conditions" class = "nav-link">Terms & Conditions</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/faqs" class = "nav-link">FAQs</a>
-              </li>
-              <li class = "nav-item">
-                <a routerLink = "/privacy-policy" class = "nav-link">Privacy & Cookie policy</a>
-              </li>
+
             </ul>
           </div>
         </div>
