--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,11 +24,11 @@
           </li>
         -->
         <li class="nav-item rounded">
-          <a class="nav-link "  routerLink = "" routerLinkActive = "active"[routerLinkActiveOptions] = "{exact : true}">Home</a>
+          <a class="nav-link "  routerLink = "" routerLinkActive = "active" [routerLinkActiveOptions] = "{exact : true}">Home</a>
         </li>
         <li class="dropdown nav-item">
           <a class="dropbtn nav-link" routerLinkActive = "active">Visit Us
-            
+
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 17'><path fill='none' stroke='#1B2121' d='M31.393.75C19.645.75 16 16.278 16 16.278h-.107S12.248.75.5.75'/></svg>
           </a>
           <div class=" dropdown-content">
@@ -36,7 +36,7 @@
           <div class = "p-3">
             <div class="row">
               <div class="col-6">
-                <a routerLink = "visit/studio">
+                <a routerLink = "studio">
                <div class = "card card-body">
                  <img src = "assets/img/dropdown-img1.jpg" width="100%" alt = "img">
                  <h6>The Studio,Marrakesh</h6>
@@ -50,7 +50,7 @@
                </a>
               </div>
               <div class="col-6">
-                <a routerLink = "visit/apartment">
+                <a routerLink = "apartment">
                   <div class = "card card-body">
                     <img src = "assets/img/dropdown-img2.jpg" width="100%" alt = "img">
                     <h6>The Apartment , NYC</h6>
